feat(calendar): support rate plan date pricing overrides