@@ -2,18 +2,21 @@ package clyvasync.Clyvasync.service.homestay.impl;
 
 import clyvasync.Clyvasync.dto.projection.RoomAvailabilityProjection;
 import clyvasync.Clyvasync.dto.projection.RoomImageProjection;
-import clyvasync.Clyvasync.dto.response.*;
+import clyvasync.Clyvasync.dto.response.AmenityHighlightResponse;
+import clyvasync.Clyvasync.dto.response.BedResponse;
+import clyvasync.Clyvasync.dto.response.CalendarInventoryResponse;
+import clyvasync.Clyvasync.dto.response.RatePlanResponse;
+import clyvasync.Clyvasync.dto.response.RoomDisplayResponse;
+import clyvasync.Clyvasync.dto.response.RoomImageResponse;
+import clyvasync.Clyvasync.dto.response.RoomResponse;
 import clyvasync.Clyvasync.dto.summary.HomestayRoomSummary;
 import clyvasync.Clyvasync.enums.room.RoomStatus;
 import clyvasync.Clyvasync.exception.AppException;
 import clyvasync.Clyvasync.exception.ResultCode;
 import clyvasync.Clyvasync.mapper.room.RoomMapper;
 import clyvasync.Clyvasync.modules.homestay.entity.HomestayRoom;
-import clyvasync.Clyvasync.dto.response.RatePlanResponse;
-import clyvasync.Clyvasync.modules.room.RoomBed;
-import clyvasync.Clyvasync.modules.room.RoomImage;
-import clyvasync.Clyvasync.modules.room.RoomRatePlan;
-import clyvasync.Clyvasync.repository.homestay.*;
+import clyvasync.Clyvasync.modules.room.*;
+import clyvasync.Clyvasync.repository.homestay.HomestayRoomRepository;
 import clyvasync.Clyvasync.repository.room.*;
 import clyvasync.Clyvasync.service.homestay.HomestayRoomService;
 import clyvasync.Clyvasync.service.room.RatePlanBenefitMappingService;
@@ -24,7 +27,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.time.LocalDate;
+import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -32,6 +37,7 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class HomestayRoomServiceImpl implements HomestayRoomService {
+
     private final HomestayRoomRepository roomRepository;
     private final RoomRatePlanService roomRatePlanService;
     private final RoomMapper roomMapper;
@@ -40,54 +46,125 @@ public class HomestayRoomServiceImpl implements HomestayRoomService {
     private final RoomRatePlanRepository roomRatePlanRepository;
     private final RoomBedRepository roomBedRepository;
     private final RoomImageRepository roomImageRepository;
+    private final RoomCalendarRepository roomCalendarRepository;
+    private final RatePlanCalendarRepository ratePlanCalendarRepository;
 
     @Override
+    @Transactional(readOnly = true)
     public List<RoomResponse> getAllRoomsByHomestay(Long homestayId) {
-        // Khi xem tất cả phòng (không chọn ngày), availableQuantity chính là quantity gốc
-        List<HomestayRoom> rooms = roomRepository.findAllByHomestayIdAndStatus(homestayId, RoomStatus.ACTIVE);
+        List<HomestayRoom> rooms = roomRepository.findAllByHomestayIdAndStatus(
+                homestayId,
+                RoomStatus.ACTIVE
+        );
 
         Map<Long, Integer> availableCountMap = rooms.stream()
-                .collect(Collectors.toMap(HomestayRoom::getId, HomestayRoom::getQuantity));
+                .collect(Collectors.toMap(
+                        HomestayRoom::getId,
+                        HomestayRoom::getQuantity
+                ));
 
         return processRoomResponses(rooms, availableCountMap);
     }
 
     @Override
-    public List<RoomResponse> findAvailableRooms(Long homestayId, LocalDate checkIn, LocalDate checkOut, int guests) {
-        // 1. Lấy danh sách Projection (chỉ chứa ID và số lượng trống)
-        List<RoomAvailabilityProjection> projections = roomRepository.findAvailableRoomsProjections(homestayId, checkIn, checkOut, guests);
+    @Transactional(readOnly = true)
+    public List<RoomResponse> findAvailableRooms(
+            Long homestayId,
+            LocalDate checkIn,
+            LocalDate checkOut,
+            int guests
+    ) {
+        List<RoomAvailabilityProjection> projections =
+                roomRepository.findAvailableRoomsProjections(
+                        homestayId,
+                        checkIn,
+                        checkOut,
+                        guests
+                );
 
-        if (projections.isEmpty()) return List.of();
+        if (projections.isEmpty()) {
+            return List.of();
+        }
 
-        // 2. Tạo Map số lượng trống từ Projection (Trực tiếp lấy getId() sẽ không bao giờ Null)
         Map<Long, Integer> availableCountMap = projections.stream()
                 .collect(Collectors.toMap(
                         RoomAvailabilityProjection::getId,
                         RoomAvailabilityProjection::getAvailableQty
                 ));
 
-        // 3. Trích xuất danh sách ID
         List<Long> roomIds = projections.stream()
                 .map(RoomAvailabilityProjection::getId)
                 .toList();
 
-        // 4. Lấy danh sách Entity Room bằng findAllById (Chỉ tốn đúng 1 câu lệnh SELECT ... WHERE id IN (...))
         List<HomestayRoom> rooms = roomRepository.findAllById(roomIds);
+        List<RoomBed> roomBeds = roomBedRepository.findByRoomIdIn(roomIds);
+        List<RoomImage> roomImages = roomImageRepository.findByRoomIdIn(roomIds);
+        List<RoomCalendar> roomCalendars =
+                roomCalendarRepository.findCalendarsByRoomIdsAndDateRange(
+                        roomIds,
+                        checkIn,
+                        checkOut
+                );
 
-        // 5. Đưa vào hàm xử lý chung của bác
-        return processRoomResponses(rooms, availableCountMap);
+        return processRoomResponses(
+                rooms,
+                availableCountMap,
+                roomBeds,
+                roomImages,
+                roomCalendars,
+                checkIn,
+                checkOut
+        );
     }
-    /**
-     * Hàm dùng chung để lắp ghép dữ liệu bổ trợ và gán availableQuantity
-     */
-    private List<RoomResponse> processRoomResponses(List<HomestayRoom> rooms, Map<Long, Integer> availableCountMap) {
-        if (rooms.isEmpty()) return List.of();
 
-        List<Long> roomIds = rooms.stream().map(HomestayRoom::getId).toList();
+    private List<RoomResponse> processRoomResponses(
+            List<HomestayRoom> rooms,
+            Map<Long, Integer> availableCountMap
+    ) {
+        if (rooms.isEmpty()) {
+            return List.of();
+        }
 
-        // Batch fetching dữ liệu liên quan (Mapping mềm)
+        List<Long> roomIds = rooms.stream()
+                .map(HomestayRoom::getId)
+                .toList();
+
+        List<RoomBed> roomBeds = roomBedRepository.findByRoomIdIn(roomIds);
+        List<RoomImage> roomImages = roomImageRepository.findByRoomIdIn(roomIds);
+
+        return processRoomResponses(
+                rooms,
+                availableCountMap,
+                roomBeds,
+                roomImages,
+                List.of(),
+                null,
+                null
+        );
+    }
+
+    private List<RoomResponse> processRoomResponses(
+            List<HomestayRoom> rooms,
+            Map<Long, Integer> availableCountMap,
+            List<RoomBed> roomBeds,
+            List<RoomImage> roomImages,
+            List<RoomCalendar> roomCalendars,
+            LocalDate checkIn,
+            LocalDate checkOut
+    ) {
+        if (rooms.isEmpty()) {
+            return List.of();
+        }
+
+        List<Long> roomIds = rooms.stream()
+                .map(HomestayRoom::getId)
+                .toList();
+
         List<RoomRatePlan> ratePlans = roomRatePlanService.getAllRoomRatePlans(roomIds);
-        List<Long> ratePlanIds = ratePlans.stream().map(RoomRatePlan::getId).toList();
+
+        List<Long> ratePlanIds = ratePlans.stream()
+                .map(RoomRatePlan::getId)
+                .toList();
 
         Map<Long, List<AmenityHighlightResponse>> highlightsMap =
                 roomAmenityHighlightService.getHighlightsForRooms(roomIds);
@@ -95,61 +172,134 @@ public class HomestayRoomServiceImpl implements HomestayRoomService {
         Map<Long, List<String>> benefitsMap =
                 ratePlanBenefitMappingService.findBenefitsByPlanIds(ratePlanIds);
 
-        // Map RatePlans sang DTO
+        Map<Long, Map<LocalDate, RatePlanCalendar>> ratePlanCalendarMap =
+                getRatePlanCalendarMap(ratePlanIds, checkIn, checkOut);
+
         Map<Long, List<RatePlanResponse>> ratePlanResponseMap = ratePlans.stream()
                 .collect(Collectors.groupingBy(
                         RoomRatePlan::getRoomId,
-                        Collectors.mapping(plan -> RatePlanResponse.builder()
-                                        .id(plan.getId())
-                                        .name(plan.getName())
-                                        .price(plan.getPrice())
-                                        .isNonRefundable(plan.getIsNonRefundable())
-                                        .benefits(benefitsMap.getOrDefault(plan.getId(), List.of()))
-                                        .build(),
-                                Collectors.toList())
+                        Collectors.mapping(
+                                plan -> toRatePlanResponse(
+                                        plan,
+                                        benefitsMap.getOrDefault(plan.getId(), List.of()),
+                                        ratePlanCalendarMap.getOrDefault(plan.getId(), Map.of()),
+                                        checkIn,
+                                        checkOut
+                                ),
+                                Collectors.toList()
+                        )
                 ));
 
-        // Build Response cuối cùng
-        return rooms.stream().map(room -> {
-            RoomResponse response = roomMapper.toRoomResponse(room);
-            response.setHighlights(highlightsMap.getOrDefault(room.getId(), List.of()));
-            response.setRatePlans(ratePlanResponseMap.getOrDefault(room.getId(), List.of()));
+        Map<Long, List<BedResponse>> bedsMap = roomBeds.stream()
+                .collect(Collectors.groupingBy(
+                        RoomBed::getRoomId,
+                        Collectors.mapping(this::toBedResponse, Collectors.toList())
+                ));
 
-            // Gán con số khả dụng thực tế
-            response.setAvailableQuantity(availableCountMap.getOrDefault(room.getId(), 0));
+        Map<Long, List<RoomImageResponse>> imagesMap = roomImages.stream()
+                .collect(Collectors.groupingBy(
+                        RoomImage::getRoomId,
+                        Collectors.mapping(this::toRoomImageResponse, Collectors.toList())
+                ));
 
-            return response;
-        }).toList();
+        Map<Long, List<CalendarInventoryResponse>> inventoryMap = roomCalendars.stream()
+                .collect(Collectors.groupingBy(
+                        RoomCalendar::getRoomId,
+                        Collectors.mapping(this::toCalendarInventoryResponse, Collectors.toList())
+                ));
+
+        return rooms.stream()
+                .map(room -> {
+                    RoomResponse response = roomMapper.toRoomResponse(room);
+
+                    List<RatePlanResponse> roomRatePlans =
+                            ratePlanResponseMap.getOrDefault(room.getId(), List.of());
+
+                    response.setHighlights(highlightsMap.getOrDefault(room.getId(), List.of()));
+                    response.setRatePlans(roomRatePlans);
+                    response.setBeds(bedsMap.getOrDefault(room.getId(), List.of()));
+                    response.setImages(imagesMap.getOrDefault(room.getId(), List.of()));
+                    response.setInventory(inventoryMap.getOrDefault(room.getId(), List.of()));
+                    response.setAvailableQuantity(
+                            availableCountMap.getOrDefault(room.getId(), 0)
+                    );
+                    response.setBasePrice(getLowestPriceFromRatePlans(roomRatePlans));
+
+                    return response;
+                })
+                .toList();
     }
+    private Map<Long, Map<LocalDate, RatePlanCalendar>> getRatePlanCalendarMap(
+            List<Long> ratePlanIds,
+            LocalDate checkIn,
+            LocalDate checkOut
+    ) {
+        if (ratePlanIds == null || ratePlanIds.isEmpty()) {
+            return Map.of();
+        }
 
+        if (checkIn == null || checkOut == null || !checkOut.isAfter(checkIn)) {
+            return Map.of();
+        }
+
+        LocalDate priceStart = checkIn;
+        LocalDate priceEnd = checkOut.minusDays(1);
+
+        List<RatePlanCalendar> calendars =
+                ratePlanCalendarRepository.findByRatePlanIdInAndNightDateBetween(
+                        ratePlanIds,
+                        priceStart,
+                        priceEnd
+                );
+
+        return calendars.stream()
+                .collect(Collectors.groupingBy(
+                        RatePlanCalendar::getRatePlanId,
+                        Collectors.toMap(
+                                RatePlanCalendar::getNightDate,
+                                calendar -> calendar,
+                                (oldValue, newValue) -> newValue
+                        )
+                ));
+    }
     @Override
+    @Transactional(readOnly = true)
     public List<HomestayRoomSummary> getRoomSummaries(List<Long> homestayIds) {
         return roomRepository.getRoomSummaries(homestayIds);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public HomestayRoom getRoomById(Long roomId) {
-        return roomRepository.findById(roomId).orElseThrow(() -> new AppException(ResultCode.HOMESTAY_NOT_FOUND));
+        return roomRepository.findById(roomId)
+                .orElseThrow(() -> new AppException(ResultCode.HOMESTAY_NOT_FOUND));
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<HomestayRoom> findByIdIn(List<Long> roomIds) {
         return roomRepository.findByIdIn(roomIds);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<HomestayRoom> findAllById(Long homestayId) {
-        return roomRepository.findById(homestayId).stream().toList();
+        return roomRepository.findById(homestayId)
+                .stream()
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<HomestayRoom> findAllByIdIn(List<Long> homestayIds) {
         return roomRepository.findAllByHomestayIdIn(homestayIds);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public Map<Long, String> getRoomImageMap(List<Long> roomIds) {
-        List<RoomImageProjection> projections = roomRepository.findRoomImagesByIdIn(roomIds);
+        List<RoomImageProjection> projections =
+                roomRepository.findRoomImagesByIdIn(roomIds);
 
         return projections.stream()
                 .collect(Collectors.toMap(
@@ -160,55 +310,197 @@ public class HomestayRoomServiceImpl implements HomestayRoomService {
     }
 
     @Override
-    public List<HomestayRoom> findAllByHomestayIdAndStatus(Long homestayId, RoomStatus status) {
-        return roomRepository.findAllByHomestayIdAndStatus(homestayId,status);
+    @Transactional(readOnly = true)
+    public List<HomestayRoom> findAllByHomestayIdAndStatus(
+            Long homestayId,
+            RoomStatus status
+    ) {
+        return roomRepository.findAllByHomestayIdAndStatus(homestayId, status);
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<RoomDisplayResponse> getRoomsByHomestayId(Long homestayId) {
         List<HomestayRoom> rooms = roomRepository.findAllByHomestayId(homestayId);
-        if (rooms.isEmpty()) return List.of();
 
-        List<Long> roomIds = rooms.stream().map(HomestayRoom::getId).toList();
+        if (rooms.isEmpty()) {
+            return List.of();
+        }
 
-        Map<Long, List<RoomBed>> bedsMap = roomBedRepository.findByRoomIdIn(roomIds).stream()
+        List<Long> roomIds = rooms.stream()
+                .map(HomestayRoom::getId)
+                .toList();
+
+        Map<Long, List<RoomBed>> bedsMap = roomBedRepository.findByRoomIdIn(roomIds)
+                .stream()
                 .collect(Collectors.groupingBy(RoomBed::getRoomId));
 
-        Map<Long, List<RoomImage>> imagesMap = roomImageRepository.findByRoomIdIn(roomIds).stream()
+        Map<Long, List<RoomImage>> imagesMap = roomImageRepository.findByRoomIdIn(roomIds)
+                .stream()
                 .collect(Collectors.groupingBy(RoomImage::getRoomId));
 
-        Map<Long, List<RoomRatePlan>> ratePlansMap = roomRatePlanRepository.findByRoomIdIn(roomIds).stream()
-                .collect(Collectors.groupingBy(RoomRatePlan::getRoomId));
+        Map<Long, List<RoomRatePlan>> ratePlansMap =
+                roomRatePlanRepository.findByRoomIdIn(roomIds)
+                        .stream()
+                        .collect(Collectors.groupingBy(RoomRatePlan::getRoomId));
 
-        return rooms.stream().map(room -> {
-            List<RoomBed> roomBeds = bedsMap.getOrDefault(room.getId(), List.of());
-            List<RoomImage> roomImages = imagesMap.getOrDefault(room.getId(), List.of());
-            List<RoomRatePlan> roomRates = ratePlansMap.getOrDefault(room.getId(), List.of());
-
-            BigDecimal defaultPrice = roomRates.stream()
-                    .map(RoomRatePlan::getPrice)
-                    .findFirst()
-                    .orElse(BigDecimal.ZERO);
-
-            return RoomDisplayResponse.builder()
-                    .id(room.getId())
-                    .name(room.getName())
-                    .type(room.getType())
-                    .description(room.getDescription())
-                    .maxGuests(room.getMaxGuests())
-                    .areaM2(room.getArea())
-                    .hasPrivateBathroom(room.getHasPrivateBathroom())
-                    .price(defaultPrice)
-
-                    .beds(roomBeds.stream().map(b -> new BedResponse(b.getBedType(), b.getQuantity())).toList())
-
-                    .images(roomImages.stream().map(img -> new RoomImageResponse(img.getId(), img.getImageUrl(), img.getIsCover())).toList())
-
-                    .ratePlans(roomRates.stream().map(r -> new RatePlanResponse(r.getId(), r.getName(), r.getPrice(), r.getIsNonRefundable())).toList())
-                    .build();
-        }).toList();
+        return rooms.stream()
+                .map(room -> buildRoomDisplayResponse(
+                        room,
+                        bedsMap.getOrDefault(room.getId(), List.of()),
+                        imagesMap.getOrDefault(room.getId(), List.of()),
+                        ratePlansMap.getOrDefault(room.getId(), List.of())
+                ))
+                .toList();
     }
 
+    private RoomDisplayResponse buildRoomDisplayResponse(
+            HomestayRoom room,
+            List<RoomBed> beds,
+            List<RoomImage> images,
+            List<RoomRatePlan> ratePlans
+    ) {
+        return RoomDisplayResponse.builder()
+                .id(room.getId())
+                .name(room.getName())
+                .type(room.getType())
+                .description(room.getDescription())
+                .maxGuests(room.getMaxGuests())
+                .areaM2(room.getArea())
+                .hasPrivateBathroom(room.getHasPrivateBathroom())
+                .price(getLowestPriceFromRatePlanEntities(ratePlans))
+                .beds(toBedResponses(beds))
+                .images(toRoomImageResponses(images))
+                .ratePlans(toRatePlanResponses(ratePlans))
+                .build();
+    }
 
+    private List<BedResponse> toBedResponses(List<RoomBed> beds) {
+        return beds.stream()
+                .map(this::toBedResponse)
+                .toList();
+    }
+
+    private BedResponse toBedResponse(RoomBed bed) {
+        return BedResponse.builder()
+                .id(bed.getId())
+                .type(bed.getBedType())
+                .quantity(bed.getQuantity())
+                .build();
+    }
+
+    private List<RoomImageResponse> toRoomImageResponses(List<RoomImage> images) {
+        return images.stream()
+                .map(this::toRoomImageResponse)
+                .toList();
+    }
+
+    private RoomImageResponse toRoomImageResponse(RoomImage image) {
+        return RoomImageResponse.builder()
+                .id(image.getId())
+                .url(image.getImageUrl())
+                .isCover(image.getIsCover())
+                .displayOrder(image.getDisplayOrder())
+                .build();
+    }
+
+    private List<RatePlanResponse> toRatePlanResponses(List<RoomRatePlan> ratePlans) {
+        return ratePlans.stream()
+                .map(ratePlan -> toRatePlanResponse(ratePlan, List.of()))
+                .toList();
+    }
+
+    private RatePlanResponse toRatePlanResponse(
+            RoomRatePlan ratePlan,
+            List<String> benefits
+    ) {
+        return RatePlanResponse.builder()
+                .id(ratePlan.getId())
+                .name(ratePlan.getName())
+                .price(ratePlan.getPrice())
+                .isNonRefundable(ratePlan.getIsNonRefundable())
+                .benefits(benefits)
+                .build();
+    }
+
+    private CalendarInventoryResponse toCalendarInventoryResponse(RoomCalendar calendar) {
+        return CalendarInventoryResponse.builder()
+                .date(calendar.getNightDate())
+                .availableQuantity(calendar.getAvailableQuantity())
+                .build();
+    }
+
+    private BigDecimal getLowestPriceFromRatePlans(List<RatePlanResponse> ratePlans) {
+        return ratePlans.stream()
+                .map(RatePlanResponse::getPrice)
+                .min(BigDecimal::compareTo)
+                .orElse(BigDecimal.ZERO);
+    }
+
+    private BigDecimal getLowestPriceFromRatePlanEntities(List<RoomRatePlan> ratePlans) {
+        return ratePlans.stream()
+                .map(RoomRatePlan::getPrice)
+                .min(BigDecimal::compareTo)
+                .orElse(BigDecimal.ZERO);
+    }
+    private RatePlanResponse toRatePlanResponse(
+            RoomRatePlan ratePlan,
+            List<String> benefits,
+            Map<LocalDate, RatePlanCalendar> priceOverrides,
+            LocalDate checkIn,
+            LocalDate checkOut
+    ) {
+        BigDecimal effectiveNightPrice = calculateAverageNightPrice(
+                ratePlan,
+                priceOverrides,
+                checkIn,
+                checkOut
+        );
+
+        return RatePlanResponse.builder()
+                .id(ratePlan.getId())
+                .name(ratePlan.getName())
+                .price(effectiveNightPrice)
+                .isNonRefundable(ratePlan.getIsNonRefundable())
+                .benefits(benefits)
+                .build();
+    }
+    private BigDecimal calculateAverageNightPrice(
+            RoomRatePlan ratePlan,
+            Map<LocalDate, RatePlanCalendar> priceOverrides,
+            LocalDate checkIn,
+            LocalDate checkOut
+    ) {
+        BigDecimal basePrice = ratePlan.getPrice() != null
+                ? ratePlan.getPrice()
+                : BigDecimal.ZERO;
+
+        if (checkIn == null || checkOut == null || !checkOut.isAfter(checkIn)) {
+            return basePrice;
+        }
+
+        long nights = ChronoUnit.DAYS.between(checkIn, checkOut);
+
+        if (nights <= 0) {
+            return basePrice;
+        }
+
+        BigDecimal totalPrice = BigDecimal.ZERO;
+
+        for (LocalDate date = checkIn; date.isBefore(checkOut); date = date.plusDays(1)) {
+            RatePlanCalendar override = priceOverrides.get(date);
+
+            BigDecimal nightlyPrice = override != null && override.getPrice() != null
+                    ? override.getPrice()
+                    : basePrice;
+
+            totalPrice = totalPrice.add(nightlyPrice);
+        }
+
+        return totalPrice.divide(
+                BigDecimal.valueOf(nights),
+                2,
+                RoundingMode.HALF_UP
+        );
+    }
 }
